force-app/main/default/objects/Visit__c/fields/Check_In_time__c.field-meta.xml
<CustomField>
    <fullName>Check_In_time__c</fullName>
    <label>Check In time</label>
    <type>Time</type>
</CustomField>