force-app/main/default/objects/Visit__c/fields/Check_out_location__c.field-meta.xml
<CustomField>
    <fullName>Check_out_location__c</fullName>
    <label>Check out location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>