force-app/main/default/objects/Visit__c/fields/Check_out_time__c.field-meta.xml
<CustomField>
    <fullName>Check_out_time__c</fullName>
    <label>Check out time</label>
    <type>Time</type>
</CustomField>