force-app/main/default/objects/Visit__c/fields/Employee_code__c.field-meta.xml
<CustomField>
    <fullName>Employee_code__c</fullName>
    <formula>Daily_log__r.Employee__r.Employee_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee code</label>
    <type>Text</type>
</CustomField>