force-app/main/default/objects/Visit__c/fields/Google_Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Map_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://maps.google.com/?q=&quot;+ TEXT( Check_In_location__Latitude__s ) + &quot;,&quot; + TEXT(Check_In_location__Longitude__s), &quot;Google Map Link&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Map Link</label>
    <type>Text</type>
</CustomField>