force-app/main/default/objects/Visit__c/fields/Route_Id__c.field-meta.xml
<CustomField>
    <fullName>Route_Id__c</fullName>
    <formula>Owner:User.Route_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Id</label>
    <type>Text</type>
</CustomField>