force-app/main/default/objects/Visit__c/fields/Visit_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_ID__c</fullName>
    <displayFormat>VIS-{0000}</displayFormat>
    <label>Visit ID</label>
    <type>AutoNumber</type>
</CustomField>