force-app/main/default/objects/Visit__c/validationRules/Add_Missed_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Missed_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND( ISPICKVAL(Status__c, &apos;Missed&apos;), ISBLANK(Missed_PostPone_Reason__c)), true, false)</errorConditionFormula>
    <errorDisplayField>Missed_PostPone_Reason__c</errorDisplayField>
    <errorMessage>Please add missed reason when status is missed.</errorMessage>
</ValidationRule>