force-app/main/default/objects/Visit__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>(DATEVALUE(Planned_Start_Time__c)) &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Planned_Start_Time__c</errorDisplayField>
    <errorMessage>Please select future date</errorMessage>
</ValidationRule>