force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account1__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Start_Time__c</columns>
    <columns>Actual_Start_Time__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Check_In_time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>