force-app/main/default/objects/Visit__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Account1__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Start_Time__c</columns>
    <columns>Actual_Start_Time__c</columns>
    <columns>Comments__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>